--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,4 +1,17 @@
 @font-face {
-    font-family: 'Roboto';
-    src: url('../fonts/Roboto/Roboto-Regular.ttf');
+    font-family: 'Cabin';
+    src: url('../fonts/Cabin/Cabin-Regular.ttf');
 }
+
+@font-face {
+    font-family: 'Herr Von Muellerhoff';
+    src: url('../fonts/Herr_Von_Muellerhoff/HerrVonMuellerhoff-Regular.ttf');
+
+}
+
+@font-face {
+    font-family: 'Source Sans Pro';
+    src: url('../fonts/Source_Sans_Pro/SourceSansPro-Regular.ttf');
+}
+
+
