--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,91 @@
+@import url(../css/fonts.css);
+*, *::before, *::after {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
 
+/* Font */
+/* Color */
+/* Main Style */
+html, body {
+  font-family: "Cabin", sans-serif;
+  font-size: 10px;
+  color: #515151;
+  scroll-behavior: smooth;
+  width: 100%;
+  height: auto;
+}
+
+img {
+  width: 100%;
+  max-width: 100%;
+}
+
+a {
+  text-decoration: none;
+}
+
+p {
+  font-size: 1.6rem;
+}
+
+.container {
+  width: 100%;
+  max-width: 122.5rem;
+  margin: auto;
+  padding: 0 2.4rem;
+}
+
+/* Header */
+header {
+  width: 100%;
+  height: auto;
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), transparent);
+}
+header nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+header nav .nav-list {
+  display: flex;
+  list-style: none;
+}
+header nav .nav-list .nav-item {
+  color: #fff;
+  font-size: 1.6rem;
+  padding: 0 2rem;
+  text-transform: uppercase;
+}
+header nav .menu-toggle {
+  position: absolute;
+  right: 2.5rem;
+  color: #fff;
+  font-size: 2rem;
+  display: none;
+}
+
+/* Hero */
+.hero {
+  background: url("../img/hero.jpg") center no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 100vh;
+}
+.hero .container {
+  display: flex;
+  height: 100vh;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+}
+.hero .container .sub-headline {
+  font-size: 8.8rem;
+  font-family: "Herr Von Muellerhoff", cursive;
+  font-weight: 100;
+  line-height: 0.4;
+  letter-spacing: 2px;
+}
 
 /*# sourceMappingURL=style.css.map */
