--- a/css/style.css
+++ b/css/style.css
@@ -52,11 +52,21 @@ header nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  transform: translateX(-130%);
 }
 header nav .nav-list {
   display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  width: 40%;
+  height: 100vh;
+  background-color: #252525;
+  align-items: center;
+  position: absolute;
+  top: 0;
+  left: 0;
   list-style: none;
+  transform: translateX(-150%);
+  transition: 0.5s;
 }
 header nav .nav-list .nav-item a {
   color: #fff;
@@ -64,7 +74,6 @@ header nav .nav-list .nav-item a {
   padding: 0 1.7rem;
   text-transform: uppercase;
   letter-spacing: 2px;
-  position: relative;
   transition: 0.4s;
 }
 header nav .nav-list .nav-item a:hover {
@@ -75,6 +84,9 @@ header nav .menu-toggle {
   right: 2.5rem;
   color: #fff;
   font-size: 2rem;
+}
+header nav .menu-toggle .fa-times {
+  display: none;
 }
 
 .active {
@@ -88,6 +100,16 @@ header nav .menu-toggle {
   background-color: #fff;
   left: 17px;
   bottom: -3px;
+}
+
+.open .nav-list {
+  transform: translateX(0);
+}
+.open .fa-times {
+  display: block !important;
+}
+.open .fa-bars {
+  display: none;
 }
 
 /* Hero */
@@ -104,20 +126,75 @@ header nav .menu-toggle {
   justify-content: center;
   align-items: center;
 }
-.hero .container .sub-headline {
+
+.sub-headline {
   font-size: 8.8rem;
   font-family: "Herr Von Muellerhoff", cursive;
   font-weight: 100;
   line-height: 0.4;
   letter-spacing: 2px;
+  color: #c59d5f;
+}
+.sub-headline .first-letter {
+  font-size: 10rem;
+  text-transform: uppercase;
+}
+
+.separator .line-right:before, .separator .line-left:before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  border: 0.6rem solid transparent;
+}
+
+.separator {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.separator .line {
+  width: 85px;
+  max-width: 8.4rem;
+  height: 0.25rem;
+  background-color: #fff;
+  position: relative;
+}
+.separator .line-left:before {
+  border-left-color: #fff;
+  left: 0;
+}
+.separator .line-right:before {
+  border-right-color: #fff;
+  right: 0;
+}
+.separator .asterisk {
+  font-size: 1.2rem;
+  color: #c59d5f;
+  padding: 0 1.6rem;
+}
+
+.headline {
+  color: #fff;
+  font-size: 3.7rem;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  font-family: "Source Sans Pro", sans-serif;
+  font-weight: 900;
 }
 
 /* Media Query */
 @media (min-width: 900px) {
-  header .nav {
+  header nav .nav-list {
     transform: translateX(0);
+    position: initial;
+    width: auto;
+    height: auto;
+    justify-content: space-between;
+    flex-direction: row;
+    background-color: transparent;
   }
-  header .nav .menu-toggle {
+  header nav .menu-toggle {
     display: none;
   }
 }
