--- a/sass/index.scss
+++ b/sass/index.scss
@@ -44,6 +44,10 @@ p {
     padding: 0 2.4rem;
 }
 
+section {
+    padding: 7.9rem;
+}
+
 /* Header */
 header {
     width: 100%;
@@ -129,6 +133,7 @@ header {
     background-size: cover;
     width: 100%;
     height: 100vh;
+    text-align: center;
     .container {
         display: flex;
         height: 100vh;
@@ -153,6 +158,15 @@ header {
     }
 }
 
+.headline {
+    color: #fff;
+    font-size: 3.7rem;
+    text-transform: uppercase;
+    letter-spacing: 4px;
+    font-family: $main-font;
+    font-weight: 900;
+}
+
 // extend for .line-left .line-right
 %line-before {
     content: '';
@@ -162,45 +176,70 @@ header {
     border: .6rem solid transparent;
 }
 
-.separator {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    .line {
-        width: 85px;
-        max-width: 8.4rem;
-        height: 0.25rem;
-        background-color: #fff;
-        position: relative;
-    }
-    .line-left {
-       &:before {
-        @extend %line-before;
-        border-left-color: #fff;
-        left: 0;
-       }
-    }
-    .line-right {
-        &:before {
-        @extend %line-before;
-         border-right-color: #fff;
-         right: 0;
+.headline-description{
+    .separator {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        .line {
+            width: 85px;
+            max-width: 8.4rem;
+            height: 0.25rem;
+            background-color: #fff;
+            position: relative;
         }
-     }
-     .asterisk {
-        font-size: 1.2rem;
-        color: $secondary-font-color;
-        padding: 0 1.6rem;
-     }
+        .line-left {
+           &:before {
+            @extend %line-before;
+            border-left-color: #fff;
+            left: 0;
+           }
+        }
+        .line-right {
+            &:before {
+            @extend %line-before;
+             border-right-color: #fff;
+             right: 0;
+            }
+         }
+         .asterisk {
+            font-size: 1.2rem;
+            color: $secondary-font-color;
+            padding: 0 1.6rem;
+         }
+    }
 }
-.headline {
-    color: #fff;
-    font-size: 3.7rem;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    font-family: $main-font;
-    font-weight: 900;
+
+.single-animation {
+    h5 {
+        color: #fff;
+        font-size: 1.4rem;
+        font-weight: 100;
+        text-transform: uppercase;
+        margin-bottom: 1.2rem;
+        letter-spacing: 3px;
+        
+    }
+    .btn-cta {
+        display: inline-block;
+        font-size: 1.1rem;
+        background-color: #fff;
+        padding: 1rem 1.8rem;
+        border-radius: .4rem;
+        color: $body-font-color;
+        text-transform: uppercase;
+        letter-spacing: 3px;
+        transition: background-color .5s;
+        &:hover {
+            background-color: $secondary-font-color;
+            color: #fff;
+        }
+    }
 }
+
+
+
+
 
 
 
@@ -222,5 +261,56 @@ header {
                 display: none;
             }
         }
+    }
+    
+    .discover-our-story {
+        .restaurant-info {
+            display: flex;
+            align-items: center;
+            text-align: center;
+            > div {
+                flex: 1;
+            }
+            .restaurant-description {
+                padding-right: 7rem;
+                .global-headline {
+                    .headline {
+                        color: $main-font-color-dark;
+                    }
+                    .asterisk {
+                        margin: 2.4rem 0;
+                    }
+                }
+                p {
+                    line-height: 1.6;
+                    margin-bottom: 2.4rem;
+                }
+                .body-cta {
+                    font-size: 1.5rem;
+                    color: $secondary-font-color;
+                    text-transform: uppercase;
+                    letter-spacing: 2px;
+                    transition: color .5s;
+                    position: relative;
+                    &:after {
+                        content: '';
+                        position: absolute;
+                        bottom: -3px;
+                        left: 0;
+                        background-color: $secondary-font-color;
+                        width: 100%;
+                        height: 2px;
+                    }
+                    &:hover {
+                        color: $body-font-color;
+                    }
+                }
+               
+            }
+          
+        }
+    }
+    .body-cta:hover:after {
+        color: $body-font-color;
     }
 }
