--- a/css/style.css
+++ b/css/style.css
@@ -13,8 +13,12 @@ html, body {
   font-size: 10px;
   color: #515151;
   scroll-behavior: smooth;
-  width: 100%;
+  width: 100vw;
   height: auto;
+}
+
+body {
+  overflow-x: hidden;
 }
 
 img {
@@ -207,6 +211,19 @@ header nav .menu-toggle .fa-times {
   color: #fff;
 }
 
+/* Discover-our-story */
+.body-cta {
+  font-size: 1.5rem;
+  color: #c59d5f;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  transition: color 0.5s;
+  position: relative;
+}
+.body-cta:hover {
+  color: #515151;
+}
+
 /* Tasteful */
 .between {
   background: url("../img/tasteful-recipes.jpg") center no-repeat;
@@ -274,7 +291,7 @@ footer .back-to-top {
   top: -2.5rem;
   right: 50%;
   transform: translateX(50%);
-  background-color: #252525;
+  background-color: #121212;
 }
 footer .back-to-top a i {
   color: #fff;
@@ -380,26 +397,14 @@ footer .footer-content-divider .newsletter-container .newsletter-form .newslette
     line-height: 1.6;
     margin-bottom: 2.4rem;
   }
-
-  .body-cta {
-    font-size: 1.5rem;
-    color: #c59d5f;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    transition: color 0.5s;
-    position: relative;
+}
+@media (min-width: 576px) and (max-width: 768px) {
+  .discover-our-story .restaurant-description {
+    margin-top: 0;
+    margin-bottom: 5rem;
   }
-  .body-cta:after {
-    content: "";
-    position: absolute;
-    bottom: -3px;
-    left: 0;
-    background-color: #c59d5f;
-    width: 100%;
-    height: 2px;
-  }
-  .body-cta:hover {
-    color: #515151;
+  .discover-our-story .asterisk {
+    margin: 2.4rem 0;
   }
 }
 
