--- a/sass/index.scss
+++ b/sass/index.scss
@@ -20,9 +20,11 @@ html, body {
     font-size: 10px;
     color: $body-font-color;
     scroll-behavior: smooth;
-    width: 100%;
+    width: 100vw;
     height: auto;
 }
+
+body { overflow-x: hidden; } 
 
 img {
     width: 100%;
@@ -230,6 +232,28 @@ header {
     }
 }
 
+/* Discover-our-story */
+.body-cta {
+    font-size: 1.5rem;
+    color: $secondary-font-color;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    transition: color .5s;
+    position: relative;
+    // &:after {
+    //     content: '';
+    //     position: absolute;
+    //     bottom: -3px;
+    //     left: 0;
+    //     background-color: $secondary-font-color;
+    //     width: 100%;
+    //     height: 2px;
+    // }
+    &:hover {
+        color: $body-font-color;
+    }
+}
+
 /* Tasteful */
 .between {
     background: url('../img/tasteful-recipes.jpg') center no-repeat;
@@ -301,7 +325,7 @@ footer {
         top: -2.5rem;
         right: 50%;
         transform: translateX(50%);
-        background-color: $main-font-color-dark;
+        background-color: #121212;
         a {
             i {
                 color: #fff;
@@ -421,24 +445,16 @@ footer {
             }
         }
     }
-    .body-cta {
-        font-size: 1.5rem;
-        color: $secondary-font-color;
-        text-transform: uppercase;
-        letter-spacing: 2px;
-        transition: color .5s;
-        position: relative;
-        &:after {
-            content: '';
-            position: absolute;
-            bottom: -3px;
-            left: 0;
-            background-color: $secondary-font-color;
-            width: 100%;
-            height: 2px;
+}
+
+@media (min-width: 576px) and (max-width: 768px){ 
+    .discover-our-story {
+        .restaurant-description {
+            margin-top: 0;
+            margin-bottom: 5rem;
         }
-        &:hover {
-            color: $body-font-color;
+        .asterisk {
+            margin: 2.4rem 0;
         }
     }
 }
