--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@ html, body {
   scroll-behavior: smooth;
   width: 100vw;
   height: auto;
+  overflow-x: hidden;
 }
 
 body {
@@ -32,6 +33,7 @@ a {
 
 p {
   font-size: 1.6rem;
+  line-height: 1.6;
 }
 
 .container {
@@ -351,7 +353,7 @@ footer .footer-content-divider .newsletter-container .newsletter-form .newslette
 footer .footer-content-divider .newsletter-container .newsletter-form .newsletter-btn {
   position: absolute;
   top: 0;
-  left: 80%;
+  margin-left: 10.5rem;
   transform: translateY(50%);
   background-color: transparent;
   padding: 1px 1.6rem;
@@ -398,13 +400,71 @@ footer .footer-content-divider .newsletter-container .newsletter-form .newslette
     margin-bottom: 2.4rem;
   }
 }
-@media (min-width: 576px) and (max-width: 768px) {
+@media (max-width: 768px) {
   .discover-our-story .restaurant-description {
     margin-top: 0;
-    margin-bottom: 5rem;
   }
-  .discover-our-story .asterisk {
+  .discover-our-story .restaurant-description .body-cta {
+    display: inline-block;
+    margin-bottom: 2rem;
+  }
+  .discover-our-story .restaurant-description .asterisk {
     margin: 2.4rem 0;
+  }
+  .discover-our-story .global-headline {
+    margin-top: 3.9rem;
+  }
+
+  .discover-our-menu .restaurant-description {
+    margin-top: 7.9rem;
+  }
+  .discover-our-menu .restaurant-description .asterisk {
+    margin: 2.4rem 0;
+  }
+
+  .headline {
+    font-size: 3rem;
+  }
+
+  .sub-headline {
+    font-size: 8rem;
+  }
+
+  section {
+    padding: 3.9rem 0;
+  }
+
+  .culinary-delight .global-headline {
+    margin-top: 3.9rem;
+  }
+}
+@media (max-width: 568px) {
+  footer {
+    padding: 3.9rem 0 !important;
+  }
+  footer .footer-content {
+    margin-top: 1rem;
+  }
+  footer .social-icon li a i {
+    font-size: 1.5rem !important;
+    padding: 0.5rem 1.2rem !important;
+  }
+  footer .social-media h4, footer .newsletter-container h4 {
+    margin-bottom: 1.5rem !important;
+    font-size: 1.5rem !important;
+  }
+  footer .newsletter-container {
+    width: 45% !important;
+  }
+  footer .newsletter-container .newsletter-input {
+    padding: 0.4rem !important;
+  }
+  footer .newsletter-container ::placeholder {
+    font-size: 1rem;
+  }
+  footer .newsletter-container .newsletter-btn {
+    margin-left: 7rem !important;
+    transform: translateY(25%) !important;
   }
 }
 
