--- a/sass/index.scss
+++ b/sass/index.scss
@@ -22,6 +22,7 @@ html, body {
     scroll-behavior: smooth;
     width: 100vw;
     height: auto;
+    overflow-x: hidden;
 }
 
 body { overflow-x: hidden; } 
@@ -37,6 +38,7 @@ a {
 
 p {
     font-size: 1.6rem;
+    line-height: 1.6;
 }
 
 .container {  // tim hieu them
@@ -386,7 +388,8 @@ footer {
                 .newsletter-btn {
                     position: absolute;
                     top: 0;
-                    left: 80%;
+                    // left: 80%;
+                    margin-left: 10.5rem;
                     transform: translateY(50%);
                     background-color: transparent;
                     padding: 1px 1.6rem;
@@ -447,15 +450,85 @@ footer {
     }
 }
 
-@media (min-width: 576px) and (max-width: 768px){ 
+@media (max-width: 768px){ 
     .discover-our-story {
         .restaurant-description {
             margin-top: 0;
-            margin-bottom: 5rem;
+            .body-cta {
+                display: inline-block;
+                margin-bottom: 2rem;
+            }
+            .asterisk {
+                margin: 2.4rem 0;
+            }
         }
-        .asterisk {
-            margin: 2.4rem 0;
+        .global-headline {
+            margin-top: 3.9rem;
+        }
+    }
+    
+    .discover-our-menu {
+        .restaurant-description {
+            margin-top: 7.9rem;
+            .asterisk {
+                margin: 2.4rem 0;
+            }
+        }
+    }
+
+    .headline {
+        font-size: 3rem;
+    }
+
+    .sub-headline {
+        font-size: 8rem;
+    }
+
+    section {
+        padding: 3.9rem 0;
+    }
+
+    .culinary-delight {
+        .global-headline {
+            margin-top: 3.9rem;
         }
     }
 }
+
+@media (max-width: 568px) {
+    footer {
+        padding: 3.9rem 0 !important;
+        .footer-content {
+            margin-top: 1rem;
+        }
+        .social-icon {
+            li a i {
+                font-size: 1.5rem !important;
+                padding: 0.5rem 1.2rem !important;
+            }
+        }
+        .social-media, .newsletter-container {
+            h4 {
+                margin-bottom: 1.5rem !important;
+                font-size: 1.5rem !important;
+            }
+        }
+
+        .newsletter-container {
+           width: 45% !important;
+           .newsletter-input {
+               padding: .4rem !important;
+           }
+           ::placeholder {
+            font-size: 1rem;
+            }
+            .newsletter-btn {
+                margin-left: 7rem !important;
+                transform: translateY(25%) !important;
+            }
+        }
+        
+    }
+}
+
 
